--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ Notes/*
 !Notes/*.pdf
 Notes/*.pdf
 !Notes/STAT 151A Lecture *.pdf
+!Notes/STAT 151A *.pdf
 !Notes/STAT 151A Review Session.pdf
 
 # Explicitly ignore other file types in Notes folder
@@ -34,6 +35,8 @@ Notes/*.sty
 *.sty
 *.pdf
 !Notes/STAT 151A Lecture *.pdf
+!Notes/STAT 151A *.pdf
+!Notes/STAT 151A Review Session.pdf
 
 # Ignore Lab folder contents
 Lab/
